# FMI

./: .gitignore  README.md
Arrays/: oddIndicesEvenElementsSum.cpp  oddIndicesEvenElementsSumUnitTests.cpp  oddIndicesSum.cpp  previousElementsSum.cpp  twoEqualConsecutiveElements.cpp
OOP/Homeworks/01_Homework/: CMakeLists.txt  Homework 1.docx  main.cpp
OOP/Homeworks/01_Homework/1/: VendingMachine.cpp  VendingMachine.hpp  drink.cpp  drink.hpp  vendingMachineUnitTests.hpp
OOP/Homeworks/01_Homework/2/: Error.cpp  Error.hpp  TestCase.cpp  TestCase.hpp  TestSuite.cpp  TestSuite.hpp  sample_unit_tests.cpp  testEngineUnitTests.hpp
OOP/Homeworks/03_Homework/: CMakeLists.txt  main.cpp
OOP/Homeworks/03_Homework/1/: Counter.cpp  Counter.hpp  LimitedCounter.cpp  LimitedCounter.hpp  LimitedTwowayCounter.cpp  LimitedTwowayCounter.hpp  Semaphore.cpp  Semaphore.hpp  TwowayCounter.cpp  TwowayCounter.hpp
OOP/Homeworks/03_Homework/2/: Developer.cpp  Developer.hpp  LeavingRequest.cpp  LeavingRequest.hpp  PromotionRequest.cpp  PromotionRequest.hpp  Request.cpp  Request.hpp  TeamLead.cpp  TeamLead.hpp
OOP/Homeworks/04_Homework/: CMakeLists.txt  main.cpp
OOP/Homeworks/04_Homework/1/: Averager.cpp  Averager.hpp  BacklogPublisher.cpp  BacklogPublisher.hpp  Message.cpp  Message.hpp  MovingAverager.cpp  MovingAverager.hpp  PeriodicSampler.cpp  PeriodicSampler.hpp  Repository.cpp  Repository.hpp  SimplePublisher.cpp  SimplePublisher.hpp  Subscriber.cpp  Subscriber.h
OOP/Homeworks/04_Homework/2/: Comparable.hpp  Debug.hpp  Document.cpp  Document.hpp  KeyValueDatabase.cpp  KeyValueDatabase.hpp  Object.cpp  Object.hpp  Serializable.hpp
(+240 files in other folders)
