cmake_minimum_required(VERSION 3.17)
project(01_Homework)

set(CMAKE_CXX_STANDARD 14)

add_executable(01_Homework main.cpp 1/drink.cpp 1/drink.hpp 1/VendingMachine.hpp 1/VendingMachine.cpp 2/Error.hpp 2/TestCase.hpp 2/TestSuite.hpp 2/testEngineUnitTests.hpp 2/Error.cpp 2/TestCase.cpp 2/TestSuite.cpp 1/vendingMachineUnitTests.hpp)