cmake_minimum_required(VERSION 3.17)
project(04_Homework)

set(CMAKE_CXX_STANDARD 14)

add_executable(04_Homework main.cpp 1/Averager.hpp 1/BacklogPublisher.hpp 1/Message.hpp 1/MovingAverager.hpp 1/PeriodicSampler.hpp 1/Repository.hpp 1/SimplePublisher.hpp 1/Averager.cpp 1/BacklogPublisher.cpp 1/Message.cpp 1/SimplePublisher.cpp 1/MovingAverager.cpp 1/PeriodicSampler.cpp 1/Repository.cpp 2/Comparable.hpp 2/Debug.hpp 2/Document.hpp 2/KeyValueDatabase.hpp 2/Object.hpp 2/Serializable.hpp 2/Object.cpp 2/Document.cpp 2/KeyValueDatabase.cpp 1/Subscriber.cpp 1/Subscriber.h)